# GameEngineFromScratch

./: .gitignore  CMakeLists.txt  main.c
Framework/Common/: BaseApplication.cpp  BaseApplication.hpp  main.cpp
Framework/Interface/: IApplication.hpp  IRuntimeModule.hpp
