cmake_minimum_required (VERSION 3.1)
set (CMAKE_C_STANDARD 11)
set (CMAKE_CXX_STANDARD 11)
project (GameEnineFromScrath)
include_directories("${PROJEDT_SOURCE_DIR}/Frameword/Common")
include_directories("${PROJEDT_SOURCE_DIR}/Frameword/Interface")
add_subdirectory(Framework)
add_subdirectory(Empty)
